new profile pic in nav bar

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <div class="row">
         <div class="col-md-12">
         <div class="colorlib-navbar-brand">
-        <a class="colorlib-logo" href="index.html">Riddhiman Roy</a>
+        <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(img/new-self.jpg);"></span>Riddhiman Roy</a>
         </div>
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
         </div>
