--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row">
         <div class="col-md-12">
         <div class="colorlib-navbar-brand">
-        <a class="colorlib-logo" href="index.html">Riddhiman Roy</a>
+        <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(img/new-self.jpg);"></span>Riddhiman Roy</a>
         </div>
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
         </div>
@@ -115,7 +115,7 @@
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
               <div class="col-md-5" data-scrollax=" properties: { translateY: '-70%'}">
-                <img src="img/self.jpg" style = "width: 100%; height: auto">
+                <img src="img/new-self.jpg" style = "width: 100%; height: auto">
               </div>
               <div class = "col-md-1"></div>
                   <div class="col-md-6 wrap ftco-animate">
