--- a/contact.html
+++ b/contact.html
@@ -77,10 +77,10 @@
                       <div class="col-md-3">
                         <div class="dbox w-100 text-center">
                           <div class="icon d-flex align-items-center justify-content-center">
-                            <span class="fa fa-phone" style="font-size:45px"></span>
+                            <span class="fa fa-linkedin-square" style="font-size:45px"></span>
                           </div>
                           <div class="text">
-                            <p>+1 (437) 987-4492</p>
+                            <p><span><a href="www.linkedin.com/in/riddhiman-roy">Riddhiman Roy</a></span></p>
                           </div>
                         </div>
                       </div>
