added smaller sections for future experiences

--- a/experience.html
+++ b/experience.html
@@ -75,22 +75,62 @@
               <div class="d-flex justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
                 <img src = "img/FLAMEpic.jpg" style = "width: 100%; height: auto">
               </div>
-                <div class="text">
-                  <h4 class="subheading">Development</h4>
-                  <h2 class="heading"><a href="portfolio-single.html">Predicting GHGs of Fleets of Light Vehicles Throughout Their Lifecycles</a></h2>
-                  <p>Working with professors in the Department of Civil and Mineral Engineering at UofT under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by vehicles in every stage of their lives. My role is to help port the code from R to Python, making future development easier. It involves me emulating the R environment structure and  various R data structures in Python.</p>
-                </div>
+              <div class="text">
+                <h4 class="subheading">Development</h4>
+                <h2 class="heading"><a href="portfolio-single.html">Predicting GHGs of Fleets of Light Vehicles Throughout Their Lifecycles</a></h2>
+                <p>Working with professors in the Department of Civil and Mineral Engineering at UofT under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by vehicles in every stage of their lives. My role is to help port the code from R to Python, making future development easier. It involves me emulating the R environment structure and  various R data structures in Python.</p>
+              </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <div class="d-flex order-2 justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
                 <img src = "img/UTATpic.jpg" style = "width: 100%; height: auto">
               </div>
-                <div class="text">
-                  <h4 class="subheading">Rocketry</h4>
-                  <h2 class="heading"><a href="portfolio-single.html">Project DarkMatter: Rocket Flight Simulator</a></h2>
-                  <p>As part of the UofT Aerospace Team's (UTAT) propulsion team working, my team and I are developing the next version of the rocket flight simulator that will be used by UTAT. Originally in MATLAB, our model will make use of RocketCEA, a python library that wraps NASA CEA (Chemical Equilibruim with Applications) using a Fortran compiler in a Linux terminal in Windows.</p>
-                  <p>Preview coming soon when the repository becomes public!</a></p>
+              <div class="text">
+                <h4 class="subheading">Rocketry</h4>
+                <h2 class="heading"><a href="portfolio-single.html">Project DarkMatter: Rocket Flight Simulator</a></h2>
+                <p>As part of the UofT Aerospace Team's (UTAT) propulsion team working, my team and I are developing the next version of the rocket flight simulator that will be used by UTAT. Originally in MATLAB, our model will make use of RocketCEA, a python library that wraps NASA CEA (Chemical Equilibruim with Applications) using a Fortran compiler in a Linux terminal in Windows.</p>
+                <p>Preview coming soon when the repository becomes public!</a></p>
+              </div>
+            </div>
+          </div>
+          <div class = "container mt-5">
+            <div class = 'row'>
+              <div class = "col-md-4 ftco-animate fadeInUp ftco-animated">
+                <div class = "blog-entry">
+                  <a href="blog-single.html" class="block-20" style="background-image:url(images/ximage_1.jpg.pagespeed.ic.BFahnGUw0w.webp)">
+                  </a>
+                  <div class="text p-4 d-block">
+                    <div class="meta mb-3">
+                      <div>uly 12, 2018</div>
+                      <div></div>
+                    </div>
+                  </div>
                 </div>
+              </div>
+              <div class = "col-md-4 ftco-animate fadeInUp ftco-animated">
+                <div class = "blog-entry">
+                  <a href="blog-single.html" class="block-20" style="background-image:url(images/ximage_1.jpg.pagespeed.ic.BFahnGUw0w.webp)">
+                  </a>
+                  <div class="text p-4 d-block">
+                    <div class="meta mb-3">
+                      <div>uly 12, 2018</div>
+                      <div></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class = "col-md-4 ftco-animate fadeInUp ftco-animated">
+                <div class = "blog-entry">
+                  <a href="blog-single.html" class="block-20" style="background-image:url(images/ximage_1.jpg.pagespeed.ic.BFahnGUw0w.webp)">
+                  </a>
+                  <div class="text p-4 d-block">
+                    <div class="meta mb-3">
+                      <div>uly 12, 2018</div>
+                      <div></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
