testing new structure

--- a/experience.html
+++ b/experience.html
@@ -101,8 +101,8 @@
                   </a>
                   <div class="text p-4 d-block">
                     <div class="meta mb-3">
-                      <div>uly 12, 2018</div>
-                      <div></div>
+                      <div>One activity</div>
+                      <div>2021</div>
                     </div>
                   </div>
                 </div>
@@ -113,8 +113,8 @@
                   </a>
                   <div class="text p-4 d-block">
                     <div class="meta mb-3">
-                      <div>uly 12, 2018</div>
-                      <div></div>
+                      <div>Another Activity</div>
+                      <div>2021</div>
                     </div>
                   </div>
                 </div>
@@ -125,8 +125,8 @@
                   </a>
                   <div class="text p-4 d-block">
                     <div class="meta mb-3">
-                      <div>uly 12, 2018</div>
-                      <div></div>
+                      <div>Yet another activity</div>
+                      <div>2021</div>
                     </div>
                   </div>
                 </div>
@@ -187,6 +187,7 @@
           </div>
           <p> Riddhiman Roy</p>
           <p> This website is still under development. If you see any bugs, send them to me via the contact form.</p>
+          <p> PS: this page especially is still under construction. Check back later!</p>
         </footer>
         
         <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
