--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
           </div>
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
-              <iframe src="rroy-resume-sept21.pdf" width="100%" height="900px"></iframe>
+              <iframe src="RiddhimanRoy_Resume_Apr25_2022v2.pdf" width="100%" height="900px"></iframe>
             </div>
           </div>  
         </section>
