--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="container">
             <div class="row d-flex" data-scrollax-parent="true">
               <div class="col-md-5" data-scrollax=" properties: { translateY: '-70%'}">
-                <img src="img/new-self.jpeg" style = "width: 100%; height: auto">
+                <img src="img/new-self_2.jpeg" style = "width: 100%; height: auto">
               </div>
               <div class = "col-md-1"></div>
                   <div class="col-md-6 wrap ftco-animate">
