--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row">
         <div class="col-md-12">
         <div class="colorlib-navbar-brand">
-        <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(img/new-self.jpeg);"></span>Riddhiman Roy</a>
+        <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(img/new-self_2.jpeg);"></span>Riddhiman Roy</a>
         </div>
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
         </div>
