long overdue changes LOL

--- a/contact.html
+++ b/contact.html
@@ -100,17 +100,17 @@
                             <a href="riddhimanroy.com"><span class="fa fa-globe" style="font-size:45px"></span></a>
                           </div>
                           <div class="text">
-                            <p><span><a href="riddhimanroy1010.github.io/index.html">riddhimanroy.com</a></span></p>
+                            <p><span><a href="https://riddhimanroy.com/">riddhimanroy.com</a></span></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-md-3">
                         <div class="dbox w-100 text-center">
                           <div class="icon d-flex align-items-center justify-content-center">
-                           <a href="https://www.instagram.com/rroyv2.0/"><span class="fa fa-instagram" style="font-size:45px"></span></a>
+                           <a href="https://www.instagram.com/r_roy_____/"><span class="fa fa-instagram" style="font-size:45px"></span></a>
                           </div>
                           <div class="text">
-                            <p><span><a href="https://www.instagram.com/rroyv2.0/">rroyv2.0<a></a></span></p>
+                            <p><span><a href="https://www.instagram.com/r_roy_____/">r_roy_____<a></a></span></p>
                           </div>
                         </div>
                       </div>
