--- a/experience.html
+++ b/experience.html
@@ -73,63 +73,85 @@
           <div class = "row no-gutters">
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <div class="d-flex justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
-                <img src = "img/FLAMEpic.jpg" style = "width: 100%; height: auto">
+                <img src = "img/paper.jpg" style = "width: 100%; height: auto">
               </div>
               <div class="text">
-                <h4 class="subheading">Development</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Predicting GHGs of Fleets of Light Vehicles Throughout Their Lifecycles</a></h2>
-                <p>Working with professors in the Department of Civil and Mineral Engineering at UofT under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by vehicles in every stage of their lives. My role is to help port the code from R to Python, making future development easier. It involves me emulating the R environment structure and  various R data structures in Python.</p>
+                <h4 class="subheading">Research</h4>
+                <h2 class="heading">Viability of Vehicle Pathways</h2>
+                <p>I worked with Professor Posen and post-doctoral researchers in his research group to work on a variety of projects. I initially worked with a post-doctoral researcher to evaluate the best-in-class vehicles for each vehicle class in the US for their tailpipe greenhouse gas emissions, to see how much of a difference just switching to these vehicles can make. Next, I worked with the same researcher to study the feasibility for vehicle greenhouse gas mitigation, answering the question: "Which of these many pathways to mitigate greenhouse gas emissions from internal combustion engines is actually feasible?" My work involved developing and optimizing an automated, multi-threaded webscraper to acquire over 70,000 data points from the IEA Policy Database, reducing runtime from 12 hours to 12 minutes. I then performed statistical analysis on these data, which I gathered into an SQL database and used python to study and generate graphs. This work is now part of a research project and paper.</p>
               </div>
             </div>
             <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
               <div class="d-flex order-2 justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
+                <img src = "img/rover.png" style = "width: 100%; height: auto">
+              </div>
+              <div class="text">
+                <h4 class="subheading">Engineering</h4>
+                <h2 class="heading">Wrist Design Lead - Robotics for Space Exploration</h2>
+                <p>I joined the Robotics for Space Exploration Team in the summer of 2022 and instantly loved the team's mission and dynamic. I absolutely became engrossed with the team's work in designing a rover with an arm to complete tasks such as autonomous traversal across all sorts of terrain, simulating a catastrophic failure on a Martian colony and others that were exciting while being challenging engineering projects. I initially worked on the arm team, working on soldering wires onto the Arduino Nanos which controlled the motors and recieved information from their encodores. I also worked on integrating the arduinos into the arm, as well as testing the whole system before we went off to Drumheller for CIRC 2022.</p>
+                <p>Now, I'm working as the Wrist Design lead, in charge of designing the new wrist for the arm on the rover. I'll be leading new recruits as well as the overall team effort to deliver a wrist that provides us the dexterity we need for as cheap, efficient and light as possible.</p>
+              </div>
+            </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <div class="d-flex justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
+                <img src = "img/utdl.jpg" style = "width: 100%; height: auto">
+              </div>
+              <div class="text">
+                <h4 class="subheading">Engineering</h4>
+                <h2 class="heading">Jerry3000 - The Storage and Retrieval Robot</h2>
+                <p>
+                  As part of the UofT Designathon, we designed Jerry3000 - The Storage and Retrieval Robot. This was using technologies from Zebra, a company specializing in optical recognition and barcode based inventory. The design challenge was to build an autonomous inventory storage and retrieval solution for a small business based in a small warehouse in a downtown location. I and two other friends (one more joined us in spirit with a video call) physically prototyped what we envisioned to be the robot with a Raspberry Pi Pico and motor driver chips, with three wheels and a winch based pulley system, dispensing with expensive and heavy hydraulic machinery which we discovered, through prototyping and research, to be far too overbuilt for our needs. We also did a more accurate CAD model in solidworks and fleshed out some of the design specifics to present at competition.
+                </p>
+              </div>
+            </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <div class="d-flex order-2 justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
+                <img src = "img/l1.png" style = "width: 100%; height: auto">
+              </div>
+              <div class="text">
+                <h4 class="subheading">Rocketry</h4>
+                <h2 class="heading">L1 Certification Launch</h2>
+                <p>This summer, I travelled with a group from the UofT Aerospace Team to Upstate New York, in the USA, to launch a sounding rocket capable of mounting of an H-class motor for an L1 certification flight with the Upstate Rocketry Research Group and the Tripoli Rocketry Association. We'd spent the month before building the rockets with the main structural airframe, fins and recovery system with nylon rope and parachute. When we got to the site, we set them up for launch with the motors and setup the delay charges in the motors to trigger the recovery system. We also simulated the rocket, finding out that it would take over 20G of initial acceleration. On site, I took a leadership role in getting all of the team's launch rails setup to ensure smooth operation.</p>
+              </div>
+            </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <div class="d-flex justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
+                <img src = "img/launchcan.jpg" style = "width: 100%; height: auto">
+              </div>
+              <div class="text">
+                <h4 class="subheading">Engineering</h4>
+                <h2 class="heading">Launch Canada Liquid Test Campaign</h2>
+                <p>I was a pad team member with Launch Canada, where we tested a Mercury-era LR-101 rocket, which is capable of 4.5 kN of thrust. It was a LOX-Kerosene engine and my role was to design and manufacture a new test stand, since the old one couldn't be used without a concrete slab to anchor it in place. We designed it in CATIA V5 and manufactured it out of galvanized steel. I was there through the cold flow tests where the stand performed perfectly and we produced a detailed and fast assembly and disassembly procedure.</p>
+              </div>
+            </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <div class="d-flex order-2 justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
+                <img src = "img/praxis.jpg" style = "width: 100%; height: auto">
+              </div>
+              <div class="text">
+                <h4 class="subheading">Engineering</h4>
+                <h2 class="heading">3 Way Butterfly Valve System for Yemeni Farmers</h2>
+                <p>For our Praxis 3 course which is the culmination of 3 design courses for UofT Engsci, we were working with the UN to design a system to make irrigation in Yemen, a war stricken zone with extreme water shortages, more efficient. Conducting stakeholder research, we found out that drip irrigation is the most common and while not efficient, we didn't want to rip out generations of farming practices. We designed a cheap and light 3D printed flow housing with a 3-way butterfly valve system. I designed the flow housing to have a spherical cavity with cylindrical holes for the inflow and outflow pipes to attach. I designed the valves myself to withstand 19 gallons per minute of water across a 5cm radial plate. I also designed the system to only need a single motor driving valves in offset, reducing cost, complexity and expense. We also tested the system, achieveing a 95% seal. We collaborated with a business and politics student from Georgia State University, melding business and human relations with the engineering side, before we presented to our stakeholders and teaching team.</p>
+              </div>
+            </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <div class="d-flex justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
                 <img src = "img/UTATpic.jpg" style = "width: 100%; height: auto">
               </div>
               <div class="text">
                 <h4 class="subheading">Rocketry</h4>
-                <h2 class="heading"><a href="portfolio-single.html">Project DarkMatter: Rocket Flight Simulator</a></h2>
-                <p>As part of the UofT Aerospace Team's (UTAT) propulsion team working, my team and I are developing the next version of the rocket flight simulator that will be used by UTAT. Originally in MATLAB, our model will make use of RocketCEA, a python library that wraps NASA CEA (Chemical Equilibruim with Applications) using a Fortran compiler in a Linux terminal in Windows.</p>
-                <p>Preview coming soon when the repository becomes public!</a></p>
+                <h2 class="heading">Project DarkMatter: Rocket Flight Simulator</h2>
+                <p>As part of the UofT Aerospace Team's (UTAT) propulsion team working, my team and I are developing the next version of the rocket flight simulator that will be used by UTAT. Originally in MATLAB, our model will make use of RocketCEA, a python library that wraps NASA CEA (Chemical Equilibruim with Applications) using a Fortran compiler in a Linux terminal in Windows. I implemented various classes related to combustion, pressurization, flow control and blowdown characteristics, as well as several user interface functions.</p>
               </div>
             </div>
-          </div>
-          <div class = "container mt-5">
-            <div class = 'row'>
-              <div class = "col-md-4 ftco-animate fadeInUp ftco-animated">
-                <div class = "blog-entry">
-                  <a href="blog-single.html" class="block-20" style="background-image:url(images/ximage_1.jpg.pagespeed.ic.BFahnGUw0w.webp)">
-                  </a>
-                  <div class="text p-4 d-block">
-                    <div class="meta mb-3">
-                      <div>One activity</div>
-                      <div>2021</div>
-                    </div>
-                  </div>
-                </div>
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <div class="d-flex order-2 justify-content-center align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
+                <img src = "img/FLAMEpic.jpg" style = "width: 100%; height: auto">
               </div>
-              <div class = "col-md-4 ftco-animate fadeInUp ftco-animated">
-                <div class = "blog-entry">
-                  <a href="blog-single.html" class="block-20" style="background-image:url(images/ximage_1.jpg.pagespeed.ic.BFahnGUw0w.webp)">
-                  </a>
-                  <div class="text p-4 d-block">
-                    <div class="meta mb-3">
-                      <div>Another Activity</div>
-                      <div>2021</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class = "col-md-4 ftco-animate fadeInUp ftco-animated">
-                <div class = "blog-entry">
-                  <a href="blog-single.html" class="block-20" style="background-image:url(images/ximage_1.jpg.pagespeed.ic.BFahnGUw0w.webp)">
-                  </a>
-                  <div class="text p-4 d-block">
-                    <div class="meta mb-3">
-                      <div>Yet another activity</div>
-                      <div>2021</div>
-                    </div>
-                  </div>
-                </div>
+              <div class="text">
+                <h4 class="subheading">Development</h4>
+                <h2 class="heading">Predicting GHGs of Fleets of Light Vehicles Throughout Their Lifecycles</h2>
+                <p>Working with Professor Daniel Posen in the Department of Civil and Mineral Engineering at UofT SPM research group under a research grant as part of ESROP-UofT, I am working on FLAME (Fleet Life Cycle Assessment and Material-Flow Estimation), a model to predict the greenhouse gasses emitted by the entire US light vehicle fleet throughout their lifetimes, projected to 2050. My role is to refactor the code from R to Python, making future development easier. I demonstrated a proof-of-concept with a significant part of the model, making several python specific optimizations and presenting this work to various high level stakeholders. I also met with researchers from the University of Nottingham and CATARC to discuss their versions as well. My codebase became the foundation for the new version of FLAME.</p>
               </div>
             </div>
           </div>
